--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0.66"
 smallvec = "1.6.1"
 reqwest = { version = "0.11.4", features = ["json"], optional = true }
 tokio = { version = "1.9.0", features = ["sync"], optional = true }
+openssl-sys = "0.9.65"
+foreign-types = "0.3.2"
 
 [dev-dependencies]
 axum = "0.1.3"
