--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ reqwest = { version = "0.11.4", features = ["json"], optional = true }
 tokio = { version = "1.9.0", features = ["sync"], optional = true }
 openssl-sys = "0.9.65"
 foreign-types = "0.3.2"
+serde_with = "3.1.0"
 
 [dev-dependencies]
 axum = "0.1.3"
