--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "jwtk"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2018"
-repository = "https://github.com/sopium/jwtk"
+repository = "https://github.com/blckngm/jwtk"
 license = "MIT"
 description = "JWT signing (JWS) and verification, with first class JWK and JWK Set (JWKS) support."
 
